# buildkite-sdk

./: .bazelignore  .env  .gitattributes  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  .projenrc.ts  .rubocop.yml  API.md  BUILD.bazel  Brewfile  CHANGELOG.md  LICENSE.md  MODULE.bazel  README.md  WORKSPACE.bazel  eslint.config.cjs  mise.toml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  release.js  tsconfig.base.json  typedoc.json
.buildkite/: pipeline.js  pipeline.rb  pipeline.yml
.buildkite/hooks/: environment  post-checkout
.github/workflows/: build.yml  release.yml
.nx/workspace-data/: eslint-4393011795395336301.hash  file-map.json  jest-7930610538513362720.hash  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  tsc-13991073429437061962.hash
.nx/workspace-data/d/: server-process.json
.projen/: deps.json  files.json  tasks.json
apps/go/: BUILD.bazel  go.mod  main.go  main_test.go  project.json
apps/python/: BUILD.bazel  README.md  project.json  pyproject.toml
apps/python/src/: hello.py  main.py
apps/python/tests/: test_hello.py  test_main.py
apps/ruby/: .rubocop.yml  Gemfile  main.rb  project.json
apps/typescript/: jest.config.ts  project.json
apps/typescript/src/: main.spec.ts  main.ts
docs/: project.json
libs/sdk/: gen-types.js  schema.json
libs/sdk/go/: buildkite-sdk.go  buildkite-sdk_test.go  go.mod  project.json  schema.go  sdk.go  sdk_test.go
libs/sdk/go/pkg/buildkite/: schema.go  sdk.go  sdk_test.go
libs/sdk/go/tests/: sdk_test.go
libs/sdk/python/: .coverage  project.json  pyproject.toml  schema.py
libs/sdk/python/src/: hello.py
libs/sdk/python/src/buildkite_sdk/: schema.py  sdk.py
libs/sdk/python/tests/: test_hello.py  test_sdk.py
libs/sdk/typescript/: eslint.config.cjs  jest.config.ts  package.json  project.json  tsconfig.lib.json
libs/sdk/typescript/src/: schema.d.ts  schema.ts  sdk.spec.ts  sdk.ts
sdk/: gen-types.js
sdk/go/: BUILD.bazel  env.mustache  go.mod  project.json
sdk/go/sdk/buildkite/: environment.go  schema.go  sdk.go  sdk_test.go
sdk/python/: BUILD.bazel  env.mustache  project.json  pyproject.toml
sdk/python/src/buildkite_sdk/: __init__.py  environment.py  schema.py  sdk.py
sdk/ruby/: .rubocop.yml  Gemfile  README.md  Rakefile  buildkite.gemspec  env.mustache  project.json
sdk/ruby/lib/: buildkite.rb  environment.rb  schema.rb
sdk/ruby/lib/buildkite/: version.rb
sdk/ruby/sig/: buildkite.rbs
sdk/ruby/spec/: buildkite_spec.rb  spec_helper.rb
sdk/typescript/: BUILD.bazel  README.md  env.mustache  jest.config.ts  package.json  project.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
sdk/typescript/src/: environment.ts  schema.ts  sdk.ts
src/: environment.ts  index.ts  stepBuilder.ts  types.d.ts  types.ts
test/: hello.test.ts
